--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-fluid">
+           <%= render "common/navbar" %>
+           <%= yield %>
+       </div>
+
+       <%= render "common/footer" %>
+
   </body>
 </html>
