--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
     <p class="text-center">Copyright ©2017 Rails404
         <br>Design by
-        <a href="blog.qinfeng.io" target=_new>xdite</a>
+        <a href="blog.qinfeng.io" target=_new>qinfeg</a>
     </p>
 </footer>
