--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,6 +4,7 @@
   <span class="pull-right">
     <% if current_user && current_user.is_member_of?(@group) %>
       <label class="label label-success"> 群成员 </label>
+      <%= link_to("退出群", quit_group_path(@group), method: :post, class: "btn btn-default") %>
     <% else %>
       <label class="label label-warning"> 不是群成员 </label>
     <% end %>
