--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,6 +7,7 @@
       <%= link_to("退出群", quit_group_path(@group), method: :post, class: "btn btn-default") %>
     <% else %>
       <label class="label label-warning"> 不是群成员 </label>
+      <%= link_to("加入群", join_group_path(@group), method: :post, class: "btn btn-default") %>
     <% end %>
    </span>
 
